Fixed nextstream bot dark mode colours

--- a/client/src/styles/partials/_dark-mode.scss
+++ b/client/src/styles/partials/_dark-mode.scss
@@ -362,49 +362,16 @@
         background: $frosted-glass;
       }
 
-      &__empty-message {
-        animation: bounce 6s infinite ease-in-out, colorShift 3s infinite ease-in-out;
-        border: .1875rem solid $primary-very-light-blue;
-        border-radius: .5rem;
-        box-shadow: $shadow-primary;
-        color: $neutral-white;
-        font-size: .75rem;
+      &__empty-message {  
+        font-size: .65rem;
         font-weight: normal;
-        line-height: .8rem;
-        text-align: center;
-        padding: .25rem;
-        width: 100%;  
-        
+        line-height: .75rem;
+     
         @include tablet {
           font-size: .85rem;
           line-height: 1.25rem;
+          padding: .5rem;
         }
-      }
-    
-      @keyframes bounce {
-          0%, 100% {
-              transform: scale(1);
-              box-shadow: $shadow-primary;
-          }
-          50% {
-              transform: scale(1.01);
-              box-shadow: 0 .5rem 1.5rem rgba($neutral-black, .2);
-          }
-      }
-    
-      @keyframes colorShift {
-          0% {
-              border-color: $neutral-white;
-              background: $primary-dark-blue;
-          }
-          50% {
-              border-color: lighten($primary-light-blue, 15%);
-              background: $primary-medium-blue;
-          }
-          100% {
-              border-color: $neutral-white;
-              background: $primary-dark-blue;
-          }
       }
     }
 
